# fastbbox

./: .gitignore  BUILD.md  CMakeLists.txt  MANIFEST.in  README.md  README_OBB.md  benchmark_comparison.py  benchmark_fastbbox.py  check_deps.py  demo_all_iou.py  demo_obb_iou.py  dev_test.py  pyproject.cython.toml  pyproject.nanobind.toml  pyproject.toml  quick_benchmark.py  setup.py  test_all_iou.py  test_basic.py  test_fastbbox.py  test_obb_iou.py
.github/workflows/: build-nanobind.yml  build.yml
fastbbox/: __init__.py  bbox.pyx  bbox_nb.cpp  obb_bbox.pyx
src/fastbbox/: __init__.py  bbox.pyx  bbox_nb.cpp  fastbbox_fp16.h  obb_bbox_nb.cpp
