[build-system]
requires = ["setuptools>=45", "wheel", "cython>=0.29", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fastbbox"
version = "0.1.0"
description = "Fast IoU/overlap computations for bounding boxes using Cython"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gerry Lim", email = "gerrylimwk@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/gerrylwk/fastbbox"
Repository = "https://github.com/gerrylwk/fastbbox"
Issues = "https://github.com/gerrylwk/fastbbox/issues"

[tool.setuptools.packages.find]
include = ["fastbbox*"]

[tool.cibuildwheel]
# Build for Python 3.8+
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
# Skip 32-bit builds and PyPy
skip = "*-win32 *-manylinux_i686 pp*"

[tool.cibuildwheel.linux]
before-all = "yum install -y gcc-c++ || apt-get update && apt-get install -y g++"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

